--- a/tut/基本光照概念.md
+++ b/tut/基本光照概念.md
@@ -4,55 +4,13 @@
 <meta http-equiv=Content-Type content="text/html; charset=gb2312">
 <meta name=Generator content="Microsoft Word 14 (filtered)">
 <style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:宋体;
-	panose-1:2 1 6 0 3 1 1 1 1 1;}
-@font-face
-	{font-family:宋体;
-	panose-1:2 1 6 0 3 1 1 1 1 1;}
-@font-face
-	{font-family:Calibri;
-	panose-1:2 15 5 2 2 2 4 3 2 4;}
-@font-face
-	{font-family:"\@宋体";
-	panose-1:2 1 6 0 3 1 1 1 1 1;}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin:0cm;
-	margin-bottom:.0001pt;
-	text-align:justify;
-	text-justify:inter-ideograph;
-	font-size:10.5pt;
-	font-family:"Calibri","sans-serif";}
-p.MsoAcetate, li.MsoAcetate, div.MsoAcetate
-	{mso-style-link:"批注框文本 Char";
-	margin:0cm;
-	margin-bottom:.0001pt;
-	text-align:justify;
-	text-justify:inter-ideograph;
-	font-size:9.0pt;
-	font-family:"Calibri","sans-serif";}
-span.Char
-	{mso-style-name:"批注框文本 Char";
-	mso-style-link:批注框文本;}
-.MsoChpDefault
-	{font-family:"Calibri","sans-serif";}
- /* Page Definitions */
- @page WordSection1
-	{size:595.3pt 841.9pt;
-	margin:72.0pt 90.0pt 72.0pt 90.0pt;
-	layout-grid:15.6pt;}
-div.WordSection1
-	{page:WordSection1;}
--->
 </style>
 
 </head>
 
 <body lang=ZH-CN style='text-justify-trim:punctuation'>
-
+过马路教程4
+---------------------
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
 <p class=MsoNormal><span style='font-family:宋体'>这一篇教程主要是想在这个小游戏中加入光照，在说明如何加光照的代码之前，我们先简单讨论一下光照的概念：</span></p>
