--- a/tut/过马路教程1.md
+++ b/tut/过马路教程1.md
@@ -4,156 +4,113 @@
 <meta http-equiv=Content-Type content="text/html; charset=gb2312">
 <meta name=Generator content="Microsoft Word 14 (filtered)">
 <style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:ËÎÌå;
-	panose-1:2 1 6 0 3 1 1 1 1 1;}
-@font-face
-	{font-family:ËÎÌå;
-	panose-1:2 1 6 0 3 1 1 1 1 1;}
-@font-face
-	{font-family:Calibri;
-	panose-1:2 15 5 2 2 2 4 3 2 4;}
-@font-face
-	{font-family:"\@ËÎÌå";
-	panose-1:2 1 6 0 3 1 1 1 1 1;}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin:0cm;
-	margin-bottom:.0001pt;
-	text-align:justify;
-	text-justify:inter-ideograph;
-	font-size:10.5pt;
-	font-family:"Calibri","sans-serif";}
-p.MsoAcetate, li.MsoAcetate, div.MsoAcetate
-	{mso-style-link:"Åú×¢¿òÎÄ±¾ Char";
-	margin:0cm;
-	margin-bottom:.0001pt;
-	text-align:justify;
-	text-justify:inter-ideograph;
-	font-size:9.0pt;
-	font-family:"Calibri","sans-serif";}
-span.Char
-	{mso-style-name:"Åú×¢¿òÎÄ±¾ Char";
-	mso-style-link:Åú×¢¿òÎÄ±¾;}
-.MsoChpDefault
-	{font-family:"Calibri","sans-serif";}
- /* Page Definitions */
- @page WordSection1
-	{size:595.3pt 841.9pt;
-	margin:72.0pt 90.0pt 72.0pt 90.0pt;
-	layout-grid:15.6pt;}
-div.WordSection1
-	{page:WordSection1;}
--->
 </style>
 
 </head>
 
 <body lang=ZH-CN style='text-justify-trim:punctuation'>
-
+è¿‡é©¬è·¯æ•™ç¨‹1
+----------
 <div class=WordSection1 style='layout-grid:15.6pt'>
+<p class=MsoNormal><span lang=EN-US>&nbsp; </span><span style='font-family:
+å®‹ä½“'>è¿™æ¬¡çš„æ•™ç¨‹çš„ç›®çš„æ˜¯ä¸ºäº†æ•™ä¼šå¤§å®¶å¦‚ä½•è¿‘ä¼¼çš„å®žçŽ°ä¸€ä¸ªæœ€è¿‘æ¯”è¾ƒç«çš„æ¸¸æˆã€Šå¤©å¤©è¿‡é©¬è·¯ã€‹å¹¶å±•ç¤ºä¸€ä¸‹</span><span lang=EN-US>Cocos2d-X</span><span
+style='font-family:å®‹ä½“'>åœ¨</span><span lang=EN-US>3D</span><span
+style='font-family:å®‹ä½“'>æ–¹é¢çš„åŠŸèƒ½ã€‚</span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp; </span><span style='font-family:
-ËÎÌå'>Õâ´ÎµÄ½Ì³ÌµÄÄ¿µÄÊÇÎªÁË½Ì»á´ó¼ÒÈçºÎ½üËÆµÄÊµÏÖÒ»¸ö×î½ü±È½Ï»ðµÄÓÎÏ·¡¶ÌìÌì¹ýÂíÂ·¡·²¢Õ¹Ê¾Ò»ÏÂ</span><span lang=EN-US>Cocos2d-X</span><span
-style='font-family:ËÎÌå'>ÔÚ</span><span lang=EN-US>3D</span><span
-style='font-family:ËÎÌå'>·½ÃæµÄ¹¦ÄÜ¡£</span></p>
+å®‹ä½“'>æˆ‘ä»¬å¿«é€Ÿæ¦‚è§ˆä¸€ä¸‹ï¼Œå¤©å¤©è¿‡é©¬è·¯çš„æ¸¸æˆä½“éªŒå¤§è‡´æ˜¯æ€Žä¹ˆæ ·çš„â€”â€”çŽ©å®¶é€šè¿‡è§¦æ‘¸çš„æ»‘åŠ¨ï¼ŒæŽ§åˆ¶ä¸€ä¸ªå°äººå‘å››ä¸ªæ–¹å‘ç§»åŠ¨ï¼Œèº²é¿è½¦è¾†ï¼Œå°½å¯èƒ½æœå‰èµ°è¶³å¤Ÿè¿œçš„è·ç¦»ï¼Œä»¥æœŸèµ¢å–é«˜åˆ†ã€‚</span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp; </span><span style='font-family:
-ËÎÌå'>ÎÒÃÇ¿ìËÙ¸ÅÀÀÒ»ÏÂ£¬ÌìÌì¹ýÂíÂ·µÄÓÎÏ·ÌåÑé´óÖÂÊÇÔõÃ´ÑùµÄ¡ª¡ªÍæ¼ÒÍ¨¹ý´¥ÃþµÄ»¬¶¯£¬¿ØÖÆÒ»¸öÐ¡ÈËÏòËÄ¸ö·½ÏòÒÆ¶¯£¬¶ã±Ü³µÁ¾£¬¾¡¿ÉÄÜ³¯Ç°×ß×ã¹»Ô¶µÄ¾àÀë£¬ÒÔÆÚÓ®È¡¸ß·Ö¡£</span></p>
+å®‹ä½“'>è½¦è¾†éšæœºçš„ä»Žå·¦å³ä¸¤ä¾§è·‘å‡ºï¼Œä½ å¿…é¡»åœ¨ä»–ä»¬çš„ç©ºéš™ç©¿è¿‡ï¼Œå¦åˆ™ä½ å°±ä¼šè¢«åŽ‹æ‰ï¼Œå½“ç„¶ï¼Œæ¸¸æˆä¸­ä¸å¯èƒ½è®©ä½ ä¸€ç›´æå¿ƒåŠèƒ†â€”â€”æ¸¸æˆä¼šé—´éš”çš„å‡ºä¸€äº›äººè¡Œé“ä½œä¸ºç¼“å†²å¸¦ï¼Œè¿™äº›ç¼“å†²å¸¦é‡Œï¼Œä¸å­˜åœ¨è½¦è¾†ï¼ŒçŽ©å®¶ä¸å¿…æ‹…å¿ƒåœ¨è¿™é‡Œä¼šè¢«æ’žæ­»ï¼Œå¯æ˜¯ç¼“å†²å¸¦é‡Œå¯èƒ½ä¼šæœ‰ä¸€äº›éšœç¢ç‰©ï¼Œè¿™äº›éšœç¢ç‰©ï¼Œä¼šé˜»æŒ ç”¨æˆ·çš„è¡ŒåŠ¨ï¼Œå¦‚æžœç”¨æˆ·å¹¶ä¸æ˜¯è¶³å¤Ÿæ˜Žæ™ºçš„è¯ï¼Œå¯èƒ½åœ¨ç©¿è¿‡é©¬è·¯æ—¶ä¼šæŠŠè‡ªå·±å‘†åˆ°ä¸€ä¸ªå¾ˆç‹­çª„éš¾ä»¥ç§»åŠ¨çš„åœ°æ–¹ã€‚</span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp; </span><span style='font-family:
-ËÎÌå'>³µÁ¾Ëæ»úµÄ´Ó×óÓÒÁ½²àÅÜ³ö£¬Äã±ØÐëÔÚËûÃÇµÄ¿ÕÏ¶´©¹ý£¬·ñÔòÄã¾Í»á±»Ñ¹±â£¬µ±È»£¬ÓÎÏ·ÖÐ²»¿ÉÄÜÈÃÄãÒ»Ö±ÌáÐÄµõµ¨¡ª¡ªÓÎÏ·»á¼ä¸ôµÄ³öÒ»Ð©ÈËÐÐµÀ×÷Îª»º³å´ø£¬ÕâÐ©»º³å´øÀï£¬²»´æÔÚ³µÁ¾£¬Íæ¼Ò²»±Øµ£ÐÄÔÚÕâÀï»á±»×²ËÀ£¬¿ÉÊÇ»º³å´øÀï¿ÉÄÜ»áÓÐÒ»Ð©ÕÏ°­Îï£¬ÕâÐ©ÕÏ°­Îï£¬»á×èÄÓÓÃ»§µÄÐÐ¶¯£¬Èç¹ûÓÃ»§²¢²»ÊÇ×ã¹»Ã÷ÖÇµÄ»°£¬¿ÉÄÜÔÚ´©¹ýÂíÂ·Ê±»á°Ñ×Ô¼º´ôµ½Ò»¸öºÜÏÁÕ­ÄÑÒÔÒÆ¶¯µÄµØ·½¡£</span></p>
+å®‹ä½“'>ä»¥ä¸Šå°±æ˜¯è¿™ä¸ªæ¸¸æˆçš„å¤§æ¦‚æ¸¸æˆæ€§å†…å®¹ï¼Œæˆ‘ä»¬é¦–å…ˆå°†å…¶æ‹†åˆ†æˆå‡ ä¸ªæ¨¡å—</span><span lang=EN-US>Player,World,CarLauncher</span><span
+style='font-family:å®‹ä½“'>ï¼Œæˆ‘åœ¨æ¯ç¯‡æ•™ç¨‹é‡Œåªä¼šæ¶‰åŠå…¶ä¸­çš„ä¸€ä¸ªã€‚</span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp; </span><span style='font-family:
-ËÎÌå'>ÒÔÉÏ¾ÍÊÇÕâ¸öÓÎÏ·µÄ´ó¸ÅÓÎÏ·ÐÔÄÚÈÝ£¬ÎÒÃÇÊ×ÏÈ½«Æä²ð·Ö³É¼¸¸öÄ£¿é</span><span lang=EN-US>Player,World,CarLauncher</span><span
-style='font-family:ËÎÌå'>£¬ÎÒÔÚÃ¿Æª½Ì³ÌÀïÖ»»áÉæ¼°ÆäÖÐµÄÒ»¸ö¡£</span></p>
+å®‹ä½“'>é¦–å…ˆï¼Œæˆ‘ä»¬è®²ä¸€ä¸‹</span><span lang=EN-US>Player</span><span style='font-family:å®‹ä½“'>ï¼Œè¿™ä¸ªæ¨¡å—ä¸»è¦æ˜¯å°†æŽ§åˆ¶çŽ©å®¶è§’è‰²çš„å„ç§æ–¹é¢ï¼Œæœ€æœ€é‡ç‚¹çš„å°±æ˜¯è§’è‰²çš„ç§»åŠ¨ï¼š</span></p>
 
-<p class=MsoNormal><span lang=EN-US>&nbsp; </span><span style='font-family:
-ËÎÌå'>Ê×ÏÈ£¬ÎÒÃÇ½²Ò»ÏÂ</span><span lang=EN-US>Player</span><span style='font-family:ËÎÌå'>£¬Õâ¸öÄ£¿éÖ÷ÒªÊÇ½«¿ØÖÆÍæ¼Ò½ÇÉ«µÄ¸÷ÖÖ·½Ãæ£¬×î×îÖØµãµÄ¾ÍÊÇ½ÇÉ«µÄÒÆ¶¯£º</span></p>
-
-<p class=MsoNormal><span style='font-family:ËÎÌå'>µÚÒ»²½£¬ÎÒÃÇÏÈ´´½¨Ò»¸öÏà»ú£¬Ö¸¶¨ÆäÍ¶Ó°µÄ¸÷¸ö²ÎÊý£¬²¢ÉèÖÃ</span><span
-lang=EN-US>cameraFlag</span><span style='font-family:ËÎÌå'>¡£</span></p>
+<p class=MsoNormal><span style='font-family:å®‹ä½“'>ç¬¬ä¸€æ­¥ï¼Œæˆ‘ä»¬å…ˆåˆ›å»ºä¸€ä¸ªç›¸æœºï¼ŒæŒ‡å®šå…¶æŠ•å½±çš„å„ä¸ªå‚æ•°ï¼Œå¹¶è®¾ç½®</span><span
+lang=EN-US>cameraFlag</span><span style='font-family:å®‹ä½“'>ã€‚</span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
-style='font-size:12.0pt;font-family:ËÎÌå'><img width=607 height=77 id="Í¼Æ¬ 5"
-src="¹ýÂíÂ·½Ì³Ì1.files/image001.jpg"
-alt="ËµÃ÷: C:\Users\ziwen.tang\AppData\Roaming\Tencent\Users\576419632\QQ\WinTemp\RichOle\RJ]~O046GW24[46BRD8~G]8.jpg"></span></p>
+style='font-size:12.0pt;font-family:å®‹ä½“'><img width=607 height=77 id="å›¾ç‰‡ 5"
+src="è¿‡é©¬è·¯æ•™ç¨‹1.files/image001.jpg"
+alt="è¯´æ˜Ž: C:\Users\ziwen.tang\AppData\Roaming\Tencent\Users\576419632\QQ\WinTemp\RichOle\RJ]~O046GW24[46BRD8~G]8.jpg"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span style='font-family:ËÎÌå'>µÚ¶þ²½£¬ÎÒÃÇ´´½¨Ò»¸ö</span><span
-lang=EN-US>Sprite3D</span><span style='font-family:ËÎÌå'>£¬×÷ÎªÄ£ÐÍ£¬µ±È»£¬¿¼ÂÇµ½¿ÉÄÜ»áÉæ¼°µ½ºÜ¶àµÄ¹ØÓÚÍæ¼Ò¿ØÖÆµÄ½ÇÉ«µÄ²Ù×÷£¬ÎÒ½«Æä·â×°ÎªÁËÒ»¸öÀà</span><span
+<p class=MsoNormal><span style='font-family:å®‹ä½“'>ç¬¬äºŒæ­¥ï¼Œæˆ‘ä»¬åˆ›å»ºä¸€ä¸ª</span><span
+lang=EN-US>Sprite3D</span><span style='font-family:å®‹ä½“'>ï¼Œä½œä¸ºæ¨¡åž‹ï¼Œå½“ç„¶ï¼Œè€ƒè™‘åˆ°å¯èƒ½ä¼šæ¶‰åŠåˆ°å¾ˆå¤šçš„å…³äºŽçŽ©å®¶æŽ§åˆ¶çš„è§’è‰²çš„æ“ä½œï¼Œæˆ‘å°†å…¶å°è£…ä¸ºäº†ä¸€ä¸ªç±»</span><span
 lang=EN-US>Player</span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
-style='font-size:12.0pt;font-family:ËÎÌå'><img width=540 height=431 id="Í¼Æ¬ 1"
-src="¹ýÂíÂ·½Ì³Ì1.files/image002.jpg"
-alt="ËµÃ÷: C:\Users\ziwen.tang\AppData\Roaming\Tencent\Users\576419632\QQ\WinTemp\RichOle\R@4O6F0UXIHB_U`_XNI$S6B.jpg"></span></p>
+style='font-size:12.0pt;font-family:å®‹ä½“'><img width=540 height=431 id="å›¾ç‰‡ 1"
+src="è¿‡é©¬è·¯æ•™ç¨‹1.files/image002.jpg"
+alt="è¯´æ˜Ž: C:\Users\ziwen.tang\AppData\Roaming\Tencent\Users\576419632\QQ\WinTemp\RichOle\R@4O6F0UXIHB_U`_XNI$S6B.jpg"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp; </span><span style='font-family:
-ËÎÌå'>ÔÚÆä¹¹Ôì·½·¨Àï£¬´´½¨ÁËÒ»¸ö</span><span lang=EN-US>Sprite3D</span><span style='font-family:
-ËÎÌå'>£¬ÎªÁËÌùºÏÔ­×÷£¬ÎÒÊ¹ÓÃÁËÒ»¸ö</span><span lang=EN-US>MineCraft</span><span
-style='font-family:ËÎÌå'>Ä£ÐÍ£¬×÷Îª½ÇÉ«£¬²¢½«ÆäÎ¢µ÷Ò»ÏÂ¸÷ÖÖÊôÐÔ¡£</span></p>
+å®‹ä½“'>åœ¨å…¶æž„é€ æ–¹æ³•é‡Œï¼Œåˆ›å»ºäº†ä¸€ä¸ª</span><span lang=EN-US>Sprite3D</span><span style='font-family:
+å®‹ä½“'>ï¼Œä¸ºäº†è´´åˆåŽŸä½œï¼Œæˆ‘ä½¿ç”¨äº†ä¸€ä¸ª</span><span lang=EN-US>MineCraft</span><span
+style='font-family:å®‹ä½“'>æ¨¡åž‹ï¼Œä½œä¸ºè§’è‰²ï¼Œå¹¶å°†å…¶å¾®è°ƒä¸€ä¸‹å„ç§å±žæ€§ã€‚</span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
-style='font-size:12.0pt;font-family:ËÎÌå'><img width=512 height=121 id="Í¼Æ¬ 2"
-src="¹ýÂíÂ·½Ì³Ì1.files/image003.png"
-alt="ËµÃ÷: C:\Users\ziwen.tang\AppData\Roaming\Tencent\Users\576419632\QQ\WinTemp\RichOle\`)9)L9%TU1064D4WQ(5%X{3.png"></span></p>
+style='font-size:12.0pt;font-family:å®‹ä½“'><img width=512 height=121 id="å›¾ç‰‡ 2"
+src="è¿‡é©¬è·¯æ•™ç¨‹1.files/image003.png"
+alt="è¯´æ˜Ž: C:\Users\ziwen.tang\AppData\Roaming\Tencent\Users\576419632\QQ\WinTemp\RichOle\`)9)L9%TU1064D4WQ(5%X{3.png"></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span style='font-size:
-12.0pt;font-family:ËÎÌå'>µ±È»£¬²»ÒªÍü¼ÇÁË£¬Òª½«ÆäÉèÖÃ<span lang=EN-US>cameraMask</span>£¬Ê¹ÆäÄÜ¹»ÕýÈ·µÄ±»Ö¸¶¨Ïà»ú½øÐÐÊÓÍ¼<span
-lang=EN-US>-</span>Í¶Ó° ±ä»»<span lang=EN-US>.</span></span></p>
+12.0pt;font-family:å®‹ä½“'>å½“ç„¶ï¼Œä¸è¦å¿˜è®°äº†ï¼Œè¦å°†å…¶è®¾ç½®<span lang=EN-US>cameraMask</span>ï¼Œä½¿å…¶èƒ½å¤Ÿæ­£ç¡®çš„è¢«æŒ‡å®šç›¸æœºè¿›è¡Œè§†å›¾<span
+lang=EN-US>-</span>æŠ•å½± å˜æ¢<span lang=EN-US>.</span></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US
-style='font-size:12.0pt;font-family:ËÎÌå'><img width=464 height=38 id="Í¼Æ¬ 4"
-src="¹ýÂíÂ·½Ì³Ì1.files/image004.jpg"
-alt="ËµÃ÷: C:\Users\ziwen.tang\AppData\Roaming\Tencent\Users\576419632\QQ\WinTemp\RichOle\70FHLII]6NI{C]YJ$5T3~{U.jpg"></span><span
-style='font-family:ËÎÌå'>¡£</span></p>
+style='font-size:12.0pt;font-family:å®‹ä½“'><img width=464 height=38 id="å›¾ç‰‡ 4"
+src="è¿‡é©¬è·¯æ•™ç¨‹1.files/image004.jpg"
+alt="è¯´æ˜Ž: C:\Users\ziwen.tang\AppData\Roaming\Tencent\Users\576419632\QQ\WinTemp\RichOle\70FHLII]6NI{C]YJ$5T3~{U.jpg"></span><span
+style='font-family:å®‹ä½“'>ã€‚</span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span style='font-family:
-ËÎÌå'>ÕâÑù£¬Ð¡ÈË£¬¾ÍÄÜÏÔÊ¾³öÀ´ÁË£¬µ«ÊÇËü»¹²»ÄÜËæ×ÅÎÒÃÇÊÖÖ¸</span><span lang=EN-US>(</span><span
-style='font-family:ËÎÌå'>Êó±ê</span><span lang=EN-US>)</span><span
-style='font-family:ËÎÌå'>µÄÍÏ×§½øÐÐÊÊµ±µÄÒÆ¶¯£¬ÎªÁËÔö¼ÓÕâÑùµÄ¹¦ÄÜ¡£ÎÒÃÇÏÈ´´½¨Ò»¸ö</span><span lang=EN-US>listener</span><span
-style='font-family:ËÎÌå'>£¬È»ºóÔÚÀïÃæ¼àÌý</span><span lang=EN-US>touch</span><span
-style='font-family:ËÎÌå'>µÄ±ä¶¯£¬²¢ÅÐ¶Ï³öÆäÊÖÊÆµÄÑù×Ó£º</span></p>
+å®‹ä½“'>è¿™æ ·ï¼Œå°äººï¼Œå°±èƒ½æ˜¾ç¤ºå‡ºæ¥äº†ï¼Œä½†æ˜¯å®ƒè¿˜ä¸èƒ½éšç€æˆ‘ä»¬æ‰‹æŒ‡</span><span lang=EN-US>(</span><span
+style='font-family:å®‹ä½“'>é¼ æ ‡</span><span lang=EN-US>)</span><span
+style='font-family:å®‹ä½“'>çš„æ‹–æ‹½è¿›è¡Œé€‚å½“çš„ç§»åŠ¨ï¼Œä¸ºäº†å¢žåŠ è¿™æ ·çš„åŠŸèƒ½ã€‚æˆ‘ä»¬å…ˆåˆ›å»ºä¸€ä¸ª</span><span lang=EN-US>listener</span><span
+style='font-family:å®‹ä½“'>ï¼Œç„¶åŽåœ¨é‡Œé¢ç›‘å¬</span><span lang=EN-US>touch</span><span
+style='font-family:å®‹ä½“'>çš„å˜åŠ¨ï¼Œå¹¶åˆ¤æ–­å‡ºå…¶æ‰‹åŠ¿çš„æ ·å­ï¼š</span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span><span
-lang=EN-US style='font-size:12.0pt;font-family:ËÎÌå'><img width=423 height=462
-id="Í¼Æ¬ 6" src="¹ýÂíÂ·½Ì³Ì1.files/image005.jpg"
-alt="ËµÃ÷: C:\Users\ziwen.tang\AppData\Roaming\Tencent\Users\576419632\QQ\WinTemp\RichOle\L]SCBU(ZXOZUP~IOANGV9%4.png"></span></p>
+lang=EN-US style='font-size:12.0pt;font-family:å®‹ä½“'><img width=423 height=462
+id="å›¾ç‰‡ 6" src="è¿‡é©¬è·¯æ•™ç¨‹1.files/image005.jpg"
+alt="è¯´æ˜Ž: C:\Users\ziwen.tang\AppData\Roaming\Tencent\Users\576419632\QQ\WinTemp\RichOle\L]SCBU(ZXOZUP~IOANGV9%4.png"></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span style='font-family:
-ËÎÌå'>ÕâÀïÎÒÃÇ½«´¥Ãþ£¨µã»÷£©Ç°ºóµÄ×ø±ê£¬×ª³ÉÏòÁ¿£¬×ö³öÒ»¸ö¼òµ¥µÄÅÐ¶Ï£¬¾Í¿ÉÒÔÖªµÀÓÃ»§µ½µ×ÊÇÏëÍùÄÄ±ßÒÆ¶¯£¬È»ºóÎÒÃÇ½«Õâ¸ö·½ÏòÐÅÏ¢´«ËÍµ½</span><span
-lang=EN-US>player</span><span style='font-family:ËÎÌå'>¶ÔÏóµÄ</span><span
-lang=EN-US>tryMove();</span><span style='font-family:ËÎÌå'>·½·¨¡£</span></p>
+å®‹ä½“'>è¿™é‡Œæˆ‘ä»¬å°†è§¦æ‘¸ï¼ˆç‚¹å‡»ï¼‰å‰åŽçš„åæ ‡ï¼Œè½¬æˆå‘é‡ï¼Œåšå‡ºä¸€ä¸ªç®€å•çš„åˆ¤æ–­ï¼Œå°±å¯ä»¥çŸ¥é“ç”¨æˆ·åˆ°åº•æ˜¯æƒ³å¾€å“ªè¾¹ç§»åŠ¨ï¼Œç„¶åŽæˆ‘ä»¬å°†è¿™ä¸ªæ–¹å‘ä¿¡æ¯ä¼ é€åˆ°</span><span
+lang=EN-US>player</span><span style='font-family:å®‹ä½“'>å¯¹è±¡çš„</span><span
+lang=EN-US>tryMove();</span><span style='font-family:å®‹ä½“'>æ–¹æ³•ã€‚</span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span><span
-style='font-family:ËÎÌå'>ÔÚ</span><span lang=EN-US>tryMove</span><span
-style='font-family:ËÎÌå'>·½·¨Àï£¬ÎÒÃÇ³¢ÊÔ¶Ô½ÇÉ«½øÐÐÒÆ¶¯£¬Çë×¢ÒâÕâÊÇ³¢ÊÔ£¬²»Ò»¶¨»áÈÃ½ÇÉ«ÕæÕýÒâÒåÉÏÒÆ¶¯£¬»¹ÐèÒª½áºÏ½ÇÉ«Ëù´¦µÄÎ»ÖÃ£¬ÒÔ¼°¸½½üµÄÕÏ°­Îï£¬ÒÔ¼°ËüÊÇ·ñÊÇ´æ»îµÄ×´Ì¬¡ª¡ªËû¿ÉÄÜ´ËÊ±ÒÑ¾­±»³µ×²ËÀÁË£º</span><span
+style='font-family:å®‹ä½“'>åœ¨</span><span lang=EN-US>tryMove</span><span
+style='font-family:å®‹ä½“'>æ–¹æ³•é‡Œï¼Œæˆ‘ä»¬å°è¯•å¯¹è§’è‰²è¿›è¡Œç§»åŠ¨ï¼Œè¯·æ³¨æ„è¿™æ˜¯å°è¯•ï¼Œä¸ä¸€å®šä¼šè®©è§’è‰²çœŸæ­£æ„ä¹‰ä¸Šç§»åŠ¨ï¼Œè¿˜éœ€è¦ç»“åˆè§’è‰²æ‰€å¤„çš„ä½ç½®ï¼Œä»¥åŠé™„è¿‘çš„éšœç¢ç‰©ï¼Œä»¥åŠå®ƒæ˜¯å¦æ˜¯å­˜æ´»çš„çŠ¶æ€â€”â€”ä»–å¯èƒ½æ­¤æ—¶å·²ç»è¢«è½¦æ’žæ­»äº†ï¼š</span><span
 lang=EN-US>)</span></p>
 
-<p class=MsoNormal><span style='font-family:ËÎÌå'>µ«ÊÇÏÖÔÚ£¬ÎÒÃÇÏÈ²»¿¼ÂÇÕâ¸öÎÊÌâ£¬Ö»ÊÇµ¥´¿µÄ¿¼ÂÇ½ÇÉ«µÄÒÆ¶¯ÎÊÌâ£¬ÓÐÁ½¸öÒª¿¼ÂÇ£¬Ê×ÏÈ½ÇÉ«ÊÇÌø×Å×ßµÄ£¬Æä´ÎÏà»úÓ¦¸Ã»áÔÚÉÔÎ¢ÂýÒ»Ð©£¬ÓÐÒ»¸ö×·ËæµÄ¸Ð¾õ¡£ÎªÁËÒªÊµÏÖÕâÁ½µã£¬ÎÒÃÇÐèÒªÊµÏÖ¼¸¸ö</span><span
-lang=EN-US>action</span><span style='font-family:ËÎÌå'>£¬ÕâÀïÎÒÀ©Õ¹²¢ÊµÏÖÁËÁ½¸ö</span><span
-lang=EN-US>Action</span><span style='font-family:ËÎÌå'>¡ª¡ª</span><span lang=EN-US>JumpBy3D</span><span
-style='font-family:ËÎÌå'>ºÍ</span><span lang=EN-US>moveTo3D</span><span
-style='font-family:ËÎÌå'>¡£À©Õ¹Æä²¢²»Ì«¸´ÔÓ£¬´ó²¿·ÖÖ»ÐèÒª½«</span><span lang=EN-US>2d</span><span
-style='font-family:ËÎÌå'>×ø±êÀ©Õ¹³É</span><span lang=EN-US>3d</span><span
-style='font-family:ËÎÌå'>µÄ£¬ÔÚÕâÀï£¬ÎÒÖ»Ð´³ö</span><span lang=EN-US>update</span><span
-style='font-family:ËÎÌå'>Ïà¹ØµÄ²¿·Ö£º</span></p>
+<p class=MsoNormal><span style='font-family:å®‹ä½“'>ä½†æ˜¯çŽ°åœ¨ï¼Œæˆ‘ä»¬å…ˆä¸è€ƒè™‘è¿™ä¸ªé—®é¢˜ï¼Œåªæ˜¯å•çº¯çš„è€ƒè™‘è§’è‰²çš„ç§»åŠ¨é—®é¢˜ï¼Œæœ‰ä¸¤ä¸ªè¦è€ƒè™‘ï¼Œé¦–å…ˆè§’è‰²æ˜¯è·³ç€èµ°çš„ï¼Œå…¶æ¬¡ç›¸æœºåº”è¯¥ä¼šåœ¨ç¨å¾®æ…¢ä¸€äº›ï¼Œæœ‰ä¸€ä¸ªè¿½éšçš„æ„Ÿè§‰ã€‚ä¸ºäº†è¦å®žçŽ°è¿™ä¸¤ç‚¹ï¼Œæˆ‘ä»¬éœ€è¦å®žçŽ°å‡ ä¸ª</span><span
+lang=EN-US>action</span><span style='font-family:å®‹ä½“'>ï¼Œè¿™é‡Œæˆ‘æ‰©å±•å¹¶å®žçŽ°äº†ä¸¤ä¸ª</span><span
+lang=EN-US>Action</span><span style='font-family:å®‹ä½“'>â€”â€”</span><span lang=EN-US>JumpBy3D</span><span
+style='font-family:å®‹ä½“'>å’Œ</span><span lang=EN-US>moveTo3D</span><span
+style='font-family:å®‹ä½“'>ã€‚æ‰©å±•å…¶å¹¶ä¸å¤ªå¤æ‚ï¼Œå¤§éƒ¨åˆ†åªéœ€è¦å°†</span><span lang=EN-US>2d</span><span
+style='font-family:å®‹ä½“'>åæ ‡æ‰©å±•æˆ</span><span lang=EN-US>3d</span><span
+style='font-family:å®‹ä½“'>çš„ï¼Œåœ¨è¿™é‡Œï¼Œæˆ‘åªå†™å‡º</span><span lang=EN-US>update</span><span
+style='font-family:å®‹ä½“'>ç›¸å…³çš„éƒ¨åˆ†ï¼š</span></p>
 
-<p class=MsoNormal><span lang=EN-US style='font-size:12.0pt;font-family:ËÎÌå'><img
-width=466 height=413 id="Í¼Æ¬ 7" src="¹ýÂíÂ·½Ì³Ì1.files/image006.jpg"
-alt="ËµÃ÷: C:\Users\ziwen.tang\AppData\Roaming\Tencent\Users\576419632\QQ\WinTemp\RichOle\A)Z3WD43X}N@_00PX`1)X]W.png"></span></p>
+<p class=MsoNormal><span lang=EN-US style='font-size:12.0pt;font-family:å®‹ä½“'><img
+width=466 height=413 id="å›¾ç‰‡ 7" src="è¿‡é©¬è·¯æ•™ç¨‹1.files/image006.jpg"
+alt="è¯´æ˜Ž: C:\Users\ziwen.tang\AppData\Roaming\Tencent\Users\576419632\QQ\WinTemp\RichOle\A)Z3WD43X}N@_00PX`1)X]W.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span><span lang=EN-US
-style='font-size:12.0pt;font-family:ËÎÌå'><img width=471 height=393 id="Í¼Æ¬ 8"
-src="¹ýÂíÂ·½Ì³Ì1.files/image007.jpg"
-alt="ËµÃ÷: C:\Users\ziwen.tang\AppData\Roaming\Tencent\Users\576419632\QQ\WinTemp\RichOle\1Y@$E]RU)@K}2XBI(H_%}EH.png"></span></p>
+style='font-size:12.0pt;font-family:å®‹ä½“'><img width=471 height=393 id="å›¾ç‰‡ 8"
+src="è¿‡é©¬è·¯æ•™ç¨‹1.files/image007.jpg"
+alt="è¯´æ˜Ž: C:\Users\ziwen.tang\AppData\Roaming\Tencent\Users\576419632\QQ\WinTemp\RichOle\1Y@$E]RU)@K}2XBI(H_%}EH.png"></span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span style='font-family:
-ËÎÌå'>ÓÐÁËÕâÁ½¸ö</span><span lang=EN-US>action</span><span style='font-family:ËÎÌå'>ºó£¬ÊµÏÖÔ­ÓÎÏ·µÄÐ§¹û¾Í·Ç³£µÄ¼òµ¥ÁË¡£</span></p>
+å®‹ä½“'>æœ‰äº†è¿™ä¸¤ä¸ª</span><span lang=EN-US>action</span><span style='font-family:å®‹ä½“'>åŽï¼Œå®žçŽ°åŽŸæ¸¸æˆçš„æ•ˆæžœå°±éžå¸¸çš„ç®€å•äº†ã€‚</span></p>
 
 <p class=MsoNormal align=left style='text-align:left'><span lang=EN-US>&nbsp;</span></p>
 
