--- a/tut/基本光照概念.md
+++ b/tut/基本光照概念.md
@@ -9,7 +9,7 @@
 </head>
 
 <body lang=ZH-CN style='text-justify-trim:punctuation'>
-过马路教程4
+基本光照概念
 ---------------------
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
